# LIVAULT

./: .gitignore  README.md  dfx.json  figma-swatches.csv  tailwind.config.js
.cursor/: modes.json
.cursor/rules/: backend-architecture.mdc  development-planning.mdc  frontend-architecture.mdc  icp-api-conventions.mdc  icp.mdc  progress-tracking.mdc  project-overview.mdc  read_this_first.mdc  update-progress.mdc  update-work.mdc
docs/: bugs.md  checking.md  progress.md  storage.md  todo.md
plans/: OVERVIEW.USER.md  admin.wireframe.md  backend.architecture.md  backend.plan.md  backend.tracking.md  branding.md  discovery.wireframe.md  frontend.architecture.md  frontend.plan.md  frontend.tracking.md  prd.md  readme.md  refactor_internal_ids.plan.md  sitemap.md  tech.docs.md  user.journey.md  vault_config.json  vault_config.schema.json  vault_content_item.schema.json  vault_content_item_file.json  vault_content_item_letter.json  vault_content_item_password.json  vault_invite_token.json  vault_invite_token.schema.json  vault_member.json  vault_member.schema.json
src/backend/: Cargo.toml  api.rs  error.rs  lib.rs  metrics.rs  rust-toolchain.toml
src/backend/adapter/: chainfusion_adapter.rs  mod.rs
src/backend/models/: audit_log.rs  billing.rs  common.rs  init.rs  mod.rs  payment.rs  upload_session.rs  vault_config.rs  vault_content_item.rs  vault_invite_token.rs  vault_member.rs
src/backend/services/: invite_service.rs  mod.rs  payment_service.rs  scheduler.rs  upload_service.rs  vault_service.rs
src/backend/storage/: approvals.rs  audit_logs.rs  billing.rs  config.rs  content.rs  content_index.rs  cursor.rs  members.rs  memory.rs  metrics.rs  mod.rs  storable.rs  structures.rs  tokens.rs  uploads.rs  vault_configs.rs
src/backend/utils/: crypto.rs  guards.rs  mod.rs  rate_limit.rs  rng.rs  time.rs
wireframe/: heir.wireframe.md  landing.wireframe.md  owner.wireframe.md  witness.wireframe.md
