[package]
name = "backend"
version = "0.1.0"
edition = "2021" # Although plan mentions 2024, stick to 2021 for broader wasm32 stability unless specific 2024 features are needed later.

[lib]
crate-type = ["cdylib"]
path = "lib.rs"

[dependencies]
candid = "0.10.7"
ic-cdk = "0.17.1"
ic-cdk-macros = "0.17.1" # Needed for macros like query/update
ic-stable-structures = "0.6.8"
ciborium = "0.2.2"
ic-cdk-timers = "0.11.0" # From plan's target stack
ic-ledger-types = "0.14.0"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11" # Explicitly requested version
thiserror = "1.0.63"
serde_json = "1.0"

# Dependencies needed based on architecture/tech docs
sha2 = "0.10.8" # For checksums mentioned in tech docs
hex = "0.4.3"
vsss-rs = "5.1"
validator = { version = "0.18.1", features = ["derive"] }
rand = "0.8.5"
getrandom = { version = "0.2", features = ["custom"] }
futures = "0.3.30"
num = { version = "0.4", features = ["serde"] }
rand_core = { version = "0.6", default-features = false, features = ["getrandom"] }
elliptic-curve = { version = "0.13", default-features = false, features = ["sec1"] }
p256 = { version = "0.13", default-features = false, features = ["ecdsa-core", "expose-field"] }

[dev-dependencies]
# Add testing dependencies later if needed

[profile.release]
lto = true
opt-level = 'z' # Optimize for size